--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,7 @@ on:
       reason:
         description: "触发原因"
         required: false
+
 jobs:
   prepare_release:
     runs-on: ubuntu-22.04
@@ -17,7 +18,8 @@ jobs:
       id: release_tag
       run: |
         release_tag="FriendlyWrt-$(date +%Y-%m-%d)"
-        echo "##[set-output name=release_tag;]$release_tag"
+        echo "release_tag=$release_tag" >> $GITHUB_ENV
+        echo "release_tag=$release_tag" >> $GITHUB_OUTPUT
 
     - name: Create empty release
       id: release
@@ -25,27 +27,37 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ steps.release_tag.outputs.release_tag }}
+        tag_name: ${{ env.release_tag }}
         draft: false
         prerelease: false
     outputs:
-      release_tag: ${{ steps.release_tag.outputs.release_tag }}
+      release_tag: ${{ env.release_tag }}
       upload_url: ${{ steps.release.outputs.upload_url }}
 
-  build_friendlywrt:
-    needs: prepare_release
+  setup_environment:
     runs-on: ubuntu-22.04
-    if: github.event.repository.owner.id == github.event.sender.id
-    strategy:
-      matrix:
-        VERSION: ['23.05', '24.10']
-        SET: [docker, non-docker]
-
+    outputs:
+      cache_key: ${{ steps.cache_key.outputs.key }}
     steps:
     - name: Checkout
-      uses: actions/checkout@main
-
-    - name: Initialization environment
+      uses: actions/checkout@v3
+      
+    - name: Generate cache key
+      id: cache_key
+      run: |
+        echo "key=env-cache-$(date +%Y%m%d)-$(sha256sum scripts/install_dependencies.sh | cut -d' ' -f1)" >> $GITHUB_OUTPUT
+      
+    - name: Cache environment
+      id: env_cache
+      uses: actions/cache@v3
+      with:
+        path: |
+          /usr/local/bin/repo
+          ~/toolchain
+        key: ${{ steps.cache_key.outputs.key }}
+      
+    - name: Install dependencies
+      if: steps.env_cache.outputs.cache-hit != 'true'
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
@@ -60,9 +72,37 @@ jobs:
         sudo -E git config --global user.email 'noreply@github.com'
         git clone https://github.com/friendlyarm/repo
         sudo -E cp repo/repo /usr/bin/
-        mkdir -p ./artifact
         sudo swapoff -a
         sudo rm -rf /usr/share/dotnet /usr/local/lib/android/sdk /usr/local/share/boost /opt/ghc
+        echo "cores: $(nproc)"
+
+  build_friendlywrt:
+    needs: [prepare_release, setup_environment]
+    runs-on: ubuntu-22.04
+    if: github.event.repository.owner.id == github.event.sender.id
+    strategy:
+      matrix:
+        VERSION: ['24.10']  # 仅保留 24.10 版本
+        SET: [docker]  # 仅保留 docker 设置
+      fail-fast: false
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Restore environment
+      uses: actions/cache@v3
+      with:
+        path: |
+          /usr/local/bin/repo
+          ~/toolchain
+        key: ${{ needs.setup_environment.outputs.cache_key }}
+
+    - name: Initialization environment (remaining steps)
+      env:
+        DEBIAN_FRONTEND: noninteractive
+      run: |
+        mkdir -p ./artifact
         echo "cores: $(nproc)"
 
     - name: Download source
@@ -70,7 +110,7 @@ jobs:
         mkdir project
         cd project
         repo init --depth=1 -u https://github.com/friendlyarm/friendlywrt_manifests -b master-v${{ matrix.VERSION }} \
-                -m rk3399.xml --repo-url=https://github.com/friendlyarm/repo  --no-clone-bundle
+                -m rk3568.xml --repo-url=https://github.com/friendlyarm/repo  --no-clone-bundle  # 使用 rk3568 配置
 
         repo sync -c friendlywrt --no-clone-bundle
         repo sync -c configs --no-clone-bundle
@@ -89,17 +129,18 @@ jobs:
     - name: Prepare dot config and feeds
       run: |
         cd project
-        [ "${{ matrix.SET }}" == "docker" ] && SUFFIX="-docker"
+        SUFFIX="-docker"
         DIRNAME=friendlywrt$(echo ${{ matrix.VERSION }}|awk -F . '{print $1}')${SUFFIX}
         CONFIG=rockchip${SUFFIX}
         cat > .current_config.mk <<EOL
-        . device/friendlyelec/rk3399/base.mk
+        . device/friendlyelec/rk3568/base.mk  # 使用 rk3568 基础配置
         TARGET_IMAGE_DIRNAME=${DIRNAME}
         TARGET_FRIENDLYWRT_CONFIG=${CONFIG}
         EOL
         DEBUG_DOT_CONFIG=1 ./build.sh friendlywrt
 
     - name: Download package
+      id: download_packages
       run: |
         cd project/friendlywrt
         make download -j8
@@ -125,11 +166,11 @@ jobs:
       run: |
         cd project
         source .current_config.mk
-        [ "${{ matrix.SET }}" == "docker" ] && SUFFIX="-docker"
+        SUFFIX="-docker"
         rootfs_filename="rootfs-friendlywrt-${{ matrix.VERSION }}${SUFFIX}.tgz"
         tar cvzf ../artifact/${rootfs_filename} ${FRIENDLYWRT_SRC}/${FRIENDLYWRT_ROOTFS} \
               ${FRIENDLYWRT_SRC}/${FRIENDLYWRT_PACKAGE_DIR}
-        echo "##[set-output name=rootfs_filename;]$rootfs_filename"
+        echo "rootfs_filename=$rootfs_filename" >> $GITHUB_OUTPUT
 
     - name: Upload rootfs package
       uses: svenstaro/upload-release-action@v2
@@ -141,37 +182,33 @@ jobs:
         overwrite: true
 
   build_img:
-    needs: [prepare_release,build_friendlywrt]
+    needs: [prepare_release, build_friendlywrt, setup_environment]
     runs-on: ubuntu-22.04
     if: github.event.repository.owner.id == github.event.sender.id
 
     strategy:
       matrix:
-        VERSION: ['23.05', '24.10']
-        CPU: [rk3328, rk3528, rk3399, rk3566, rk3568, rk3576, rk3588]
-        SET: [docker, non-docker]
+        VERSION: ['24.10']  # 仅保留 24.10 版本
+        CPU: [rk3568]  # 仅保留 rk3568 CPU
+        SET: [docker]  # 仅保留 docker 设置
+      fail-fast: false
     steps:
     - name: Checkout
-      uses: actions/checkout@main
+      uses: actions/checkout@v3
 
-    - name: Initialization environment
+    - name: Restore environment
+      uses: actions/cache@v3
+      with:
+        path: |
+          /usr/local/bin/repo
+          ~/toolchain
+        key: ${{ needs.setup_environment.outputs.cache_key }}
+
+    - name: Initialization environment (remaining steps)
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
-        sudo rm -rf /etc/apt/sources.list.d
-        wget https://raw.githubusercontent.com/friendlyarm/build-env-on-ubuntu-bionic/master/install.sh
-        sed -i -e 's/^apt-get -y install openjdk-8-jdk/# apt-get -y install openjdk-8-jdk/g' install.sh
-        sed -i -e 's/^\[ -d fa-toolchain \]/# [ -d fa-toolchain ]/g' install.sh
-        sed -i -e 's/^(cat fa-toolchain/# (cat fa-toolchain/g' install.sh
-        sed -i -e 's/^(tar xf fa-toolchain/# (tar xf fa-toolchain/g' install.sh
-        sudo -E bash ./install.sh
-        sudo -E git config --global user.name 'GitHub Actions'
-        sudo -E git config --global user.email 'noreply@github.com'
-        git clone https://github.com/friendlyarm/repo
-        sudo -E cp repo/repo /usr/bin/
         mkdir -p ./artifact
-        sudo swapoff -a
-        sudo rm -rf /usr/share/dotnet /usr/local/lib/android/sdk /usr/local/share/boost /opt/ghc
         echo "cores: $(nproc)"
 
     - name: Download source
@@ -179,7 +216,7 @@ jobs:
         mkdir project
         cd project
         repo init --depth=1 -u https://github.com/friendlyarm/friendlywrt_manifests -b master-v${{ matrix.VERSION }} \
-                -m ${{ matrix.CPU }}.xml --repo-url=https://github.com/friendlyarm/repo  --no-clone-bundle
+                -m rk3568.xml --repo-url=https://github.com/friendlyarm/repo  --no-clone-bundle  # 使用 rk3568 配置
 
         repo sync -c kernel --no-clone-bundle
         repo sync -c u-boot --no-clone-bundle
@@ -191,18 +228,7 @@ jobs:
         repo sync -c scripts/sd-fuse  --no-clone-bundle
         repo sync -c toolchain  --no-clone-bundle
 
-    - name: Download friendlywrt rootfs (non-docker)
-      if: matrix.SET == 'non-docker'
-      uses: robinraju/release-downloader@v1.6
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        repository: ${{ github.repository }}
-        tag: ${{ needs.prepare_release.outputs.release_tag }}
-        fileName: "rootfs-friendlywrt-${{ matrix.VERSION }}.tgz"
-
-    - name: Download friendlywrt rootfs (docker)
-      if: matrix.SET == 'docker'
+    - name: Download friendlywrt rootfs
       uses: robinraju/release-downloader@v1.6
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -215,34 +241,8 @@ jobs:
       id: config
       run: |
         cd project
-        case ${{ matrix.CPU }} in
-        rk3328)
-          MODEL=R2S-R2C-Series
-          ;;
-        rk3528)
-          MODEL=NanoPi-Zero2
-          ;;
-        rk3399)
-          MODEL=R4S-Series
-          ;;
-        rk3568)
-          MODEL=R5S-R5C-Series
-          ;;
-        rk3566)
-          MODEL=R3S-Series
-          ;;
-        rk3576)
-          MODEL=NanoPi-M5
-          ;;
-        rk3588)
-          MODEL=T6-R6S-R6C-M6-Series
-          ;;
-        *)
-          echo "unknow cpu"
-          exit 1
-          ;;
-        esac
-        [ "${{ matrix.SET }}" == "docker" ] && SUFFIX="-docker"
+        MODEL=R5S-R5C-Series  # 固定为 R5S-R5C-Series 型号
+        SUFFIX="-docker"
         FILENAME=${MODEL}-FriendlyWrt-${{ matrix.VERSION }}${SUFFIX}.img
         DIRNAME=friendlywrt$(echo ${{ matrix.VERSION }}|awk -F . '{print $1}')${SUFFIX}
         CONFIG=rockchip${SUFFIX}
@@ -252,12 +252,12 @@ jobs:
         TARGET_FRIENDLYWRT_CONFIG=${CONFIG}
         TARGET_SD_RAW_FILENAME=${FILENAME}
         EOL
-        echo "##[set-output name=img_filename;]$FILENAME"
+        echo "img_filename=$FILENAME" >> $GITHUB_OUTPUT
 
     - name: Unpack friendlywrt rootfs
       run: |
         cd project
-        [ "${{ matrix.SET }}" == "docker" ] && SUFFIX="-docker"
+        SUFFIX="-docker"
         tar xvzf "../rootfs-friendlywrt-${{ matrix.VERSION }}${SUFFIX}.tgz"
 
     - name: Compile uboot and kernel
@@ -269,12 +269,8 @@ jobs:
         ./build.sh uboot
         ./build.sh kernel
 
-        ## If you want to compile a driver from source, here is an example
-        # case ${{ matrix.CPU }} in
-        # rk3568)
-        #     ../scripts/3rd/add_r8125.sh
-        #     ;;
-        # esac
+        ## 启用 R8125 驱动 (适用于 R5S)
+        ../scripts/3rd/add_r8125.sh
 
     - name: Build sd image
       id: build_sd_image
